@@ -33,6 +33,7 @@ import de.mrjulsen.mcdragonlib.DragonLib;
 import de.mrjulsen.mcdragonlib.data.ETextAlignment;
 import de.mrjulsen.mcdragonlib.util.TextUtils;
 import net.minecraft.core.BlockPos;
+import net.minecraft.core.RegistryAccess;
 import net.minecraft.core.Vec3i;
 import net.minecraft.nbt.CompoundTag;
 import net.minecraft.network.chat.Component;
@@ -139,7 +140,7 @@ public class AdvancedDisplayTarget extends DisplayTarget {
 					SimpleStaticTextDisplaySettings settings = controller
 							.getSettingsAs(SimpleStaticTextDisplaySettings.class)
 							.orElse(new SimpleStaticTextDisplaySettings());
-					settings.setStaticText(Component.Serializer.toJson((text.get(0))));
+					settings.setStaticText(Component.Serializer.toJson(text.getFirst(), RegistryAccess.EMPTY));
 					CreateRailwaysNavigator.LOGGER.debug(settings.getStaticText());
 					ModCommonEvents.getCurrentServer()
 							.ifPresent(x -> x.executeIfPossible(() -> controller.applyToAll(a -> {
@@ -172,7 +173,7 @@ public class AdvancedDisplayTarget extends DisplayTarget {
 								break;
 							component.setStaticText("{\"text\":\"\"}");
 						} else
-							component.setStaticText(Component.Serializer.toJson(text.get(i)));
+							component.setStaticText(Component.Serializer.toJson(text.get(i), RegistryAccess.EMPTY));
 						if (!component.shouldRetainScaleAndPos()) {
 							component.setTextAlignment(ETextAlignment.LEFT);
 							component.setXScale(0.4f);
